# wazo-prometheus-exporter-plugin

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
contrib/: self-check.sh
etc/asterisk/: prometheus.conf
etc/nginx/locations/https-available/: asterisk-metrics  block-metrics  nginx-metrics  node-metrics  postgres-metrics  process-metrics  rabbitmq-metrics  wazo-phoned-metrics  wazo-sysconfd
etc/nginx/sites-available/: nginx-metrics  zzz-proxy-metrics
etc/process_exporter/: process.yml
etc/systemd/system/: nginx_exporter.service  node_exporter.service  postgres_exporter.service  process_exporter.service  rabbitmq_exporter.service
etc/wazo-amid/conf.d/: prometheus-exporter.yml
etc/wazo-auth/conf.d/: prometheus-exporter.yml
etc/wazo-dird/conf.d/: prometheus-exporter.yml
wazo/: plugin.yml  rules
wazo_prometheus_exporter/plugins/fastapi/metric/: plugin.py
wazo_prometheus_exporter/plugins/flask/metric/: plugin.py
