[project]
name = "wazo-prometheus-exporter"
dynamic = [
    "description",
    "version",
    "authors",
    "urls",
    "entry-points",
]

[build-system]
requires = ["setuptools", "wheel", "pyyaml"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wazo_prometheus_exporter*"]

[tool.setuptools.package-data]
wazo_prometheus_exporter = ["plugins/flask/metric/api.yml"]

[tool.mypy]
python_version = "3.11"
show_error_codes = true
check_untyped_defs = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
skip-string-normalization = true

[tool.flake8]
show-source = true
max-line-length = 99
exclude = [
    ".tox",
]

[tool.isort]
profile = "black"
py_version = 311
